<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cse.formmaking.MainActivity"
    tools:showIn="@color/colorPrimary"
    android:weightSum="1">


    <TextView
        android:text="@string/reg"
        android:layout_height="wrap_content"
        android:id="@+id/t1"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="match_parent"

        android:layout_weight="0.16" />

    <!--<TextView
        android:text="@string/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt1"
        android:layout_weight="0.75"
        android:layout_below="@+id/t1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        tools:layout_weight="0.90"
        android:textSize="24sp" />-->

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:hint="@string/uname"

        android:inputType="textPersonName" />

    <!-- <TextView
         android:text="@string/txt2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/et1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="68dp"
         android:id="@+id/t2"
         android:textSize="24sp" />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/et2"
        android:hint="@string/email"/>

    <!--<TextView
        android:text="@string/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="62dp"
        android:id="@+id/t3"
        android:textSize="24sp" />-->

    <EditText
        android:id="@+id/et3"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="numberPassword" />

    <CheckBox
        android:text="@string/ck1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/checkBox" />

    <CheckBox
        android:text="@string/ck2"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/checkBox2"
       />

    <CheckBox
        android:text="@string/ck3"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3"
        android:layout_gravity="center"
        />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center" >
    <EditText
        android:id="@+id/d"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/date1" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnDate" />

</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <EditText
            android:id="@+id/time"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/time1" />

        <Button
            android:id="@+id/btnTime"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnTime" />

    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/btn"

        />

</LinearLayout>
